refactor to use stream